WorkInProgress/Codeforces - Codeforces Round #673 (Div. 2)/B. Two Arrays/attic/stderr
[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Codeforces Round #673 (Div. 2)/B. Two Arrays/sol.cpp:161:25: [0m[0;1;31merror: [0m[1mexpected ';' after expression[0m
        cout << x << " "
[0;1;32m                        ^
[0m[0;32m                        ;
[0m1 error generated.
